@@ -1,6 +1,5 @@
-package HTML::Forms::Field::Money;
-
 use utf8;
+package HTML::Forms::Field::Money;
 
 use HTML::Forms::Constants qw( FALSE META );
 use HTML::Forms::Types     qw( Bool Int Str );
